edition = "2023";

package fileservice.v1;

option go_package = "deploytar/proto/fileservice/v1";

service FileService {
  rpc ListDirectory(ListDirectoryRequest) returns (ListDirectoryResponse);
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
}

message ListDirectoryRequest {
  string directory = 1;
}

message DirectoryEntry {
  string name = 1;
  string type = 2;
  string size = 3;
  string link = 4;
}

message ListDirectoryResponse {
  string path = 1;
  repeated DirectoryEntry entries = 2;
  string parent_link = 3;
}

message UploadFileRequest {
  oneof data {
    FileInfo info = 1;
    bytes chunk_data = 2;
  }
}

message FileInfo {
  string path = 1;
  string filename = 2;
}

message UploadFileResponse {
  string message = 1;
  string file_path = 2;
}
